Created a GUI class for handling all user interfaces

--- a/src/.project
+++ b/src/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CS350Project2_src</name>
+	<name>CS350ServerProject_src</name>
 	<comment></comment>
 	<projects>
 	</projects>
